<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plottingScreen"
    android:gravity="center"
    android:orientation="horizontal"
    android:keepScreenOn="true"
    android:background="@color/black">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/chart"
        android:layout_width="@dimen/_400sdp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_2sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:text="@string/not_connected"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_button"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/start"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_button"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/stop"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"/>

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_button"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/refresh"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_button"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/save"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"/>

    </LinearLayout>

</LinearLayout>