<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".parameterScreen"
    android:gravity="center"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@color/bgColor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltage_control"
                android:gravity="start"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/voltageControl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/fourVolt"
                        android:text="@string/_4_volt"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:checked="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <RadioButton
                        android:id="@+id/threeVolt"
                        android:text="@string/_3_volt"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:checked="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <RadioButton
                        android:id="@+id/twoVolt"
                        android:text="@string/_2_volt"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:checked="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <RadioButton
                        android:id="@+id/oneVolt"
                        android:text="@string/_1_v"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_control"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="0dp"/>

            <RadioGroup
                android:id="@+id/currentControl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_30sdp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/fiveHundredMa"
                    android:text="@string/_500_ma"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

                <RadioButton
                    android:id="@+id/hundredMa"
                    android:text="@string/_100_ma"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>


                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

                <RadioButton
                    android:id="@+id/fiveMa"
                    android:text="@string/_5_ma"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

                <RadioButton
                    android:id="@+id/twoMa"
                    android:text="@string/_2_ma"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/start_button"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/next"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>